Adding partial-view 'BlockListDocumentType.cshtml'

--- a/Views/Partials/BlockListDocumentType.cshtml
+++ b/Views/Partials/BlockListDocumentType.cshtml
@@ -23,6 +23,11 @@
              @Html.Partial("~/Views/Partials/BlockList/Components/bloco3.cshtml",block)
             break;
             
+            case "Umbraco.Web.PublishedModels.Block3":
+             @Html.Partial("~/Views/Partials/BlockList/Components/bloco3.cshtml",block)
+            break;
+            
+            
         }
     }
 }
