Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -1,6 +1,11 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage
+﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<BlockListItem>
+@using Umbraco.Core.Models.Blocks;
+@using ContentModels = Umbraco.Web.PublishedModels;
+@{
 
-<form action="/search/" method="GET">
-    <input type="text" placeholder="Search..." name="query">
-    <button>Search</button>
-</form>
+    <form action="/search/" method="GET">
+        <input type="text" placeholder="Search..." name="query">
+        <button>Search</button>
+    </form>
+
+}
