--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -1,7 +1,24 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<BlockListItem>
 @using Umbraco.Core.Models.Blocks;
 @using ContentModels = Umbraco.Web.PublishedModels;
-@{
+ @{
+        var searchQuery = Request.QueryString["query"];
+    
+        if (!string.IsNullOrEmpty(searchQuery))    
+        {
+            <div class="searchresults">
+                <p>Your search results for <strong>@searchQuery</strong></p>
+                <ul>
+                    @foreach (var result in Umbraco.Search(searchQuery))
+                    {
+                        <li>
+                            <a href="@result.Url">@result.Name</a>
+                        </li>
+                    }
+                </ul>
+            </div>
+         }
+    }
 
 }
 
