--- a/Views/Search.cshtml
+++ b/Views/Search.cshtml
@@ -3,6 +3,7 @@
 	Layout = null;
 }
 
+<div class="container">
     <form action="/search/" method="GET">
         <input type="text" placeholder="Search..." name="query">
         <button>Search</button>
@@ -26,3 +27,4 @@
             </div>
          }
     }
+</div>    
