Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -1,4 +1,8 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage
+@using Umbraco.Examine
+@using ContentModels = Umbraco.Web.PublishedModels;
+
+
 @{
 	Layout = null;
 }
