Adding template 'Search'

--- a/Views/Search.cshtml
+++ b/Views/Search.cshtml
@@ -3,6 +3,8 @@
 	Layout = null;
 }
 
+
+<div class="container">
 @* the fun starts here *@
 
     <form action="/search/" method="GET">
@@ -28,3 +30,5 @@
             </div>
          }
     }
+    
+</div>    
