--- a/Views/Search.cshtml
+++ b/Views/Search.cshtml
@@ -1,33 +1,28 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage
+﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.Search>
+@using ContentModels = Umbraco.Web.PublishedModels;
 @{
-	Layout = "master.cshtml";
+    Layout = "master.cshtml";
 }
 
+    <div class="container">
+                @{
+                    var searchQuery = Request.QueryString["query"];
 
-<div class="container">
-
-    <form action="/search/" method="GET">
-        <input type="text" placeholder="Search..." name="query">
-        <button>Search</button>
-    </form>
-    
-    @{
-        var searchQuery = Request.QueryString["query"];
-    
-        if (!string.IsNullOrEmpty(searchQuery))    
-        {
-            <div class="searchresults">
-                <p>Your search results for <strong>@searchQuery</strong></p>
-                <ul>
-                    @foreach (var result in Umbraco.ContentQuery.Search(searchQuery))
+                    if (!string.IsNullOrEmpty(searchQuery))    
                     {
-                        <li>
-                            <a href="@result.Url">@result.Name</a>
-                        </li>
-                    }
-                </ul>
+                        <div class="searchresults">
+                            <p>Your search results for <strong>@searchQuery</strong></p>
+                            <ul>
+                                @foreach (var result in Umbraco.Search(searchQuery))
+                                {
+                                    <li>
+                                        <a href="@result.Url">@result.Name</a>
+                                    </li>
+                                }
+                            </ul>
+                        </div>
+                     }else{
+                        <h1>No results</h1>
+                     }
+                }
             </div>
-         }
-    }
-    
-</div>    
