--- a/Views/Search.cshtml
+++ b/Views/Search.cshtml
@@ -13,7 +13,7 @@
                         <div class="searchresults">
                             <p>Your search results for <strong>@searchQuery</strong></p>
                             <ul>
-                                @foreach (var result in Umbraco.Search(searchQuery))
+                                @foreach (var result in Umbraco.ContentQuery.Search(searchQuery))
                                 {
                                     <li>
                                         <a href="@result.Url">@result.Name</a>
