--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -1,7 +1,6 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<BlockListItem>
+﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage
 @using Umbraco.Core.Models.Blocks;
 @using ContentModels = Umbraco.Web.PublishedModels;
 @{
-    var content = (ContentModels.Block4)Model.Content;
 
 }
