--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -4,3 +4,8 @@
 @{
 
 }
+
+    <form action="/search/" method="GET">
+        <input type="text" placeholder="Search..." name="query">
+        <button>Search</button>
+    </form>
