--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -5,7 +5,7 @@
 
 }
 
-    <form action="/search/" method="GET">
+    <form action="" method="GET">
         <input type="text" placeholder="Search..." name="query">
         <button>Search</button>
     </form>
