--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -9,3 +9,23 @@
         <input type="text" placeholder="Search..." name="query">
         <button>Search</button>
     </form>
+    
+    
+    @{
+        var searchQuery = Request.QueryString["query"];
+    
+        if (!string.IsNullOrEmpty(searchQuery))    
+        {
+            <div class="searchresults">
+                <p>Your search results for <strong>@searchQuery</strong></p>
+                <ul>
+                    @foreach (var result in Umbraco.Search(searchQuery))
+                    {
+                        <li>
+                            <a href="@result.Url">@result.Name</a>
+                        </li>
+                    }
+                </ul>
+            </div>
+         }
+    }
