--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -1,5 +1,4 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<BlockListItem>
-@using Umbraco.Core.Models.Blocks;
+﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage
 @using ContentModels = Umbraco.Web.PublishedModels;
 @{
 
