--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -14,5 +14,8 @@
     @{
         var searchQuery = Request.QueryString["query"];
     
-       
+        if (!string.IsNullOrEmpty(searchQuery))    
+        {
+            
+         }
     }
