--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -16,6 +16,16 @@
     
         if (!string.IsNullOrEmpty(searchQuery))    
         {
-            <p>aqui</p>
+            <div>
+                <p>Your search results for <strong>@searchQuery</strong></p>
+                <ul>
+                    @foreach (var result in Umbraco.ContentQuery.Search(searchQuery))
+                    {
+                        @*<li>
+                            <a href="@result.Url">@result.Name</a>
+                        </li>*@
+                    }
+                </ul>
+            </div>
         }
     }
