--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -4,7 +4,7 @@
 @{
 
 }
-
+<div class="container">
     <form action="" method="GET">
         <input type="text" placeholder="Search..." name="query">
         <button>Search</button>
@@ -29,3 +29,4 @@
             </div>
         }
     }
+</div>
