Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -19,12 +19,12 @@
             <div>
                 <p>Your search results for <strong>@searchQuery</strong></p>
                 <ul>
-              @*      @foreach (var result in Umbraco.ContentQuery.Search(searchQuery))
+                    @foreach (var result in Umbraco.ContentQuery.Search(searchQuery))
                     {
                         @*<li>
                             <a href="@result.Url">@result.Name</a>
                         </li>*@
-                @*    }*@
+                    }
                 </ul>
             </div>
         }
