--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -21,6 +21,7 @@
                 <ul>
                     @foreach (var result in Umbraco.ContentQuery.Search(searchQuery))
                     {
+                    <p>@result</p>
                         @*<li>
                             <a href="@result.Url">@result.Name</a>
                         </li>*@
