--- a/Views/Banner.cshtml
+++ b/Views/Banner.cshtml
@@ -17,6 +17,7 @@
          <h1 class="hero-title">@subtitle</h1>
          <img src=@Image.Url height="300" width="374" srcset="" class="">
          <li><a href="@Link.Url" target="@Link.Target">@Link.Name</a></li>
+         <p>fabio</p>
          @*<li> 
              <a href="@Link.Url">@Link.Name</a>
          </li>*@
