Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -21,7 +21,7 @@
                 <ul>
                     @foreach (var result in Umbraco.ContentQuery.Search(searchQuery))
                     {
-                    <p>@result.Content</p>
+                    <p>@result.Content.Name</p>
                         <li>
 
                         </li>
