Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -21,9 +21,8 @@
                 <ul>
                     @foreach (var result in Umbraco.ContentQuery.Search(searchQuery))
                     {
-                    <p>@result.Content.Name</p>
                         <li>
-
+                             <a href="@result.Content.Url">@result.Content.Name</a>
                         </li>
                     }
                 </ul>
