--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -1,49 +1,32 @@
-﻿ @inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.Search>
+﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<BlockListItem>
+@using Umbraco.Core.Models.Blocks;
 @using ContentModels = Umbraco.Web.PublishedModels;
-@using Umbraco.Examine
 @{
-    Layout = "master.cshtml";
-    var searchQuery = Request.QueryString["q"];
+
 }
-
-<div class="light-section">
-    <div class="w-container">
-
-       <div class="contact-clean">
-    <form action="@Model.Url" method="GET" id="search">
-        <div class="form-group">
-            <div class="row">
-                <div class="col-xs-12 col-sm-8">
-                    <input type="text" class="form-control col-xs-6" placeholder="Search..." name="q" value="@searchQuery" />
-                </div>
-                <div class="col-xs-12 col-sm-4">
-                    <button class="btn btn-primary">Search <i class="fa fa-search"></i></button>
-                </div>
-                <div class="col-xs-12">
-                    @if (!string.IsNullOrWhiteSpace(searchQuery))
-                    {
-                        var results = Umbraco.ContentQuery.Search(searchQuery, string.Empty);
-                        long resultCount = results != null && results.Any() ? results.Count() : 0;
-                        <div class="searchresults">
-                            <p>We found <strong>@resultCount</strong> result@(resultCount != 1 ? "s" : "") when searching for <strong>@searchQuery</strong></p>
-                            @if (resultCount > 0)
-                            {
-                                <ul>
-                                    @foreach (var result in results)
-                                    {
-                                        <li>
-                                            <h3><a href="@result.Content.Url">@result.Content.Name</a></h3>
-                                            <p>@(result.Content.Value<string>("metaDescription"))</p>
-                                        </li>
-                                    }
-                                </ul>
-                            }
-                        </div>
-                    }
-                </div>
-            </div>
-        </div>
+<div class="container">
+    <form action="/blocklist" method="GET">
+        <input type="text" placeholder="Search..." name="query">
+        <button>Search</button>
     </form>
-</div>
-    </div>
+    
+    
+    @{
+        var searchQuery = Request.QueryString["query"];
+    
+        if (!string.IsNullOrEmpty(searchQuery))    
+        {
+            <div>
+                <p>Your search results for <strong>@searchQuery</strong></p>
+                <ul>
+                    @foreach (var result in Umbraco.ContentQuery.Search(searchQuery))
+                    {
+                        <li>
+                             <a href="@result.Content.Url">@result.Content.Name</a>
+                        </li>
+                    }
+                </ul>
+            </div>
+        }
+    }
 </div>
