--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -4,11 +4,12 @@
 @{
     var searchQuery = Request.QueryString["q"];
 }
-<div class="container">
-    <form action="/blocklist" method="GET">
-        <input type="text" placeholder="Search..." name="query">
-        <button>Search</button>
-    </form>
+                <div class="col-xs-12 col-sm-8">
+                    <input type="text" class="form-control col-xs-6" placeholder="Search..." name="q" value="@searchQuery" />
+                </div>
+                <div class="col-xs-12 col-sm-4">
+                    <button class="btn btn-primary">Search <i class="fa fa-search"></i></button>
+                </div>
     
     
     @{
