Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -5,7 +5,7 @@
     var searchQuery = Request.QueryString["q"];
 }
 <div class="container">
-    <form action="/blocklist" method="GET">
+    <form action="" method="GET">
         <input type="text" placeholder="Search..." name="query">
         <button>Search</button>
     </form>
