--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -14,19 +14,25 @@
     @{
         var searchQuery = Request.QueryString["query"];
     
-        if (!string.IsNullOrEmpty(searchQuery))    
-        {
-            <div>
-                <p>Your search results for <strong>@searchQuery</strong></p>
-                <ul>
-                    @foreach (var result in Umbraco.ContentQuery.Search(searchQuery))
+       @if (!string.IsNullOrWhiteSpace(searchQuery))
                     {
-                        <li>
-                             <a href="@result.Content.Url">@result.Content.Name</a>
-                        </li>
+                        var results = Umbraco.ContentQuery.Search(searchQuery, string.Empty);
+                        long resultCount = results != null && results.Any() ? results.Count() : 0;
+                        <div class="searchresults">
+                            <p>We found <strong>@resultCount</strong> result@(resultCount != 1 ? "s" : "") when searching for <strong>@searchQuery</strong></p>
+                            @if (resultCount > 0)
+                            {
+                                <ul>
+                                    @foreach (var result in results)
+                                    {
+                                        <li>
+                                            <h3><a href="@result.Content.Url">@result.Content.Name</a></h3>
+                                            <p>@(result.Content.Value<string>("metaDescription"))</p>
+                                        </li>
+                                    }
+                                </ul>
+                            }
+                        </div>
                     }
-                </ul>
-            </div>
-        }
     }
 </div>
