--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -13,8 +13,10 @@
 @{
         var searchQuery = Request.QueryString["query"];
     
-        if (!string.IsNullOrWhiteSpace(searchQuery))
+        if (Fields.Keys.Contains(searchQuery))
                     {
+                    
+                        
                         var results = Umbraco.ContentQuery.Search(searchQuery, string.Empty);
                         long resultCount = results != null && results.Any() ? results.Count() : 0;
                         <div class="searchresults">
