Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -29,7 +29,7 @@
                                         <li>
                                                   if(c.Fields.Keys.Contains("FileTextContent"))
                                                     {
-                                                      var bodyText = c.Fields["FileTextContent"];
+                                                      var bodyText = c.Fields["Title"];
                                                       <p>@Html.Raw(bodyText.Substring(0,100))</p>
                                                     }
       </div>
