--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -2,38 +2,31 @@
 @using Umbraco.Core.Models.Blocks;
 @using ContentModels = Umbraco.Web.PublishedModels;
 @{
-
+    var counter = 0;
+    var searchQuery = Request.QueryString["q"];
 }
 <div class="container">
     <form action="" method="GET">
-        <input type="text" placeholder="Search..." name="query">
+        <input type="text" placeholder="Search..." name="q">
         <button>Search</button>
     </form>
     
-@{
-        var searchQuery = Request.QueryString["query"];
-    
-        if (!string.IsNullOrWhiteSpace(searchQuery))
-                    {
-                        var results = Umbraco.ContentQuery.Search(searchQuery, string.Empty);
-                        long resultCount = results != null && results.Any() ? results.Count() : 0;
-                        <div class="searchresults">
-                            <p>We found <strong>@resultCount</strong> result@(resultCount != 1 ? "s" : "") when searching for <strong>@searchQuery</strong></p>
-                            @if (resultCount > 0)
-                            {
-                                <ul>
-                                    @foreach (var result in results)
-                                    {
-                                        <li>
-                                            <h3><a href="@result.Content.Url">@result.Content.Name</a></h3>
-                                            <p>@(result.Content.Value<string>("metaDescription"))</p>
-                                        </li>
-                                    }
-                                </ul>
-                            }
-                        </div>
-                    }
-
-
+@if (!string.IsNullOrWhiteSpace(searchQuery))
+{
+    var results = Umbraco.ContentQuery.Search(searchQuery, string.Empty);
+    long resultCount = results != null && results.Any() ? results.Count() : 0;
+    <div class="searchresults">
+        <p>We found <strong>@resultCount</strong> result@(resultCount != 1 ? "s" : "") when searching for <strong>@searchQuery</strong></p>
+        @if (resultCount > 0)
+        {
+            <ul>
+                @foreach (var result in results)
+                {
+                    <li>
+                        <h3><a href="@result.Content.Url">@result.Content.Name</a></h3>
+                    </li>
+                }
+            </ul>
+        }
+    </div>
 }
-</div>
