--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -2,8 +2,8 @@
 @using Umbraco.Core.Models.Blocks;
 @using ContentModels = Umbraco.Web.PublishedModels;
 @{
-    var query = Request.QueryString["q"];
-    IEnumerable<IPublishedContent> results = Umbraco.TypedSearch(query, true, "ExternalSearcher").Where(c =>  c.ItemType == PublishedItemType.Content);
+    var counter = 0;
+    var searchQuery = Request.QueryString["q"];
 }
 <div class="container">
     <form action="" method="GET">
