--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -19,7 +19,7 @@
                                                                                                                || c.TemplateId ==  1052 
                                                                                                                || c.TemplateId ==  1056 
                                                                                                                || c.TemplateId ==  1086) 
-                                                                                                     && c.ItemType == PublishedItemType.Content);;
+                                                                                                     && c.ItemType == PublishedItemType.Content);
     long resultCount = results != null && results.Any() ? results.Count() : 0;
     <div class="searchresults">
         <p>We found <strong>@resultCount</strong> result@(resultCount != 1 ? "s" : "") when searching for <strong>@searchQuery</strong></p>
