--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -13,7 +13,15 @@
     
 @if (!string.IsNullOrWhiteSpace(searchQuery))
 {
-    var results = Umbraco.ContentQuery.Search(searchQuery, string.Empty).Where(c => c.ItemType == PublishedItemType.Content);
+    IEnumerable<IPublishedContent> results = Umbraco.TypedSearch(query, true, "ExternalSearcher").Where(c => (c.TemplateId ==  1097 
+                                                                                                           || c.TemplateId ==  1061 
+                                                                                                           || c.TemplateId ==  1059 
+                                                                                                           || c.TemplateId ==  1052 
+                                                                                                           || c.TemplateId ==  1056 
+                                                                                                           || c.TemplateId ==  1086) 
+                                                                                                 && c.ItemType == PublishedItemType.Content);
+   
+   
     long resultCount = results != null && results.Any() ? results.Count() : 0;
     <div class="searchresults">
         <p>We found <strong>@resultCount</strong> result@(resultCount != 1 ? "s" : "") when searching for <strong>@searchQuery</strong></p>
