--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -1,6 +1,7 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<BlockListItem>
 @using Umbraco.Core.Models.Blocks;
 @using ContentModels = Umbraco.Web.PublishedModels;
+@using Current = Umbraco.Web.Composing.Current;
 @{
     var counter = 0;
     var searchQuery = Request.QueryString["q"];
@@ -11,22 +12,30 @@
         <button>Search</button>
     </form>
     
-@if (!string.IsNullOrWhiteSpace(searchQuery))
-{
-    var results = Umbraco.ContentQuery.Search(searchQuery, string.Empty);
-    long resultCount = results != null && results.Any() ? results.Count() : 0;
-    <div class="searchresults">
-        <p>We found <strong>@resultCount</strong> result@(resultCount != 1 ? "s" : "") when searching for <strong>@searchQuery</strong></p>
-        @if (resultCount > 0)
-        {
-            <ul>
-                @foreach (var result in results)
-                {
-                    <li>
-                        <h3><a href="@result.Content.Url">@result.Content.Name</a></h3>
-                    </li>
-                }
-            </ul>
-        }
-    </div>
+@inherits Umbraco.Web.Mvc.UmbracoViewPage
+
+@{
+    var pageSize = 10;
+    var pageIndex = int.Parse(Request.QueryString["page"]);
+    var search = Current.PublishedContentQuery.Search(
+        Request.QueryString["query"],
+        pageIndex * pageSize,   // skip
+        pageSize,               // take
+        out var totalRecords);
 }
+
+<div>
+    <h3>Search Results</h3>
+    <ul>
+        @foreach (var result in search)
+        {
+            <li>
+                Id: @result.Content.Id
+                <br/>
+                Name: @result.Content.Name
+                <br />
+                Score: @result.Score
+            </li>
+        }
+    </ul>
+</div>
