--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -13,7 +13,7 @@
     
 @if (!string.IsNullOrWhiteSpace(searchQuery))
 {
-    var results = Umbraco.ContentQuery.Search(searchQuery, string.Empty).Where(c => c.NodeTypeAlias("contentPage"));
+    var results = Umbraco.ContentQuery.Search(searchQuery, string.Empty);
     long resultCount = results != null && results.Any() ? results.Count() : 0;
     <div class="searchresults">
         <p>We found <strong>@resultCount</strong> result@(resultCount != 1 ? "s" : "") when searching for <strong>@searchQuery</strong></p>
@@ -22,8 +22,10 @@
             <ul>
                 @foreach (var result in results)
                 {
+                    
                     <li>
                         <h3><a href="@result.Content.Url">@result.Content.Name</a></h3>
+                        <p>@result.NodeTypeAlias</p>
                     </li>
                 }
             </ul>
