--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -14,6 +14,13 @@
 @if (!string.IsNullOrWhiteSpace(searchQuery))
 {
     var results = Umbraco.ContentQuery.Search(searchQuery, string.Empty);
+    
+        @*
+    var selection = node.Children.Where(x => x.IsVisible() @*&& x.ContentType.Alias == "contentPage"*@)
+    @*.ToArray();
+    *@
+
+    
     long resultCount = results != null && results.Any() ? results.Count() : 0;
     <div class="searchresults">
         <p>We found <strong>@resultCount</strong> result@(resultCount != 1 ? "s" : "") when searching for <strong>@searchQuery</strong></p>
