--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -14,7 +14,7 @@
 @if (!string.IsNullOrWhiteSpace(searchQuery))
 {
     var results = Umbraco.ContentQuery.Search(searchQuery, string.Empty);
-    var tours = Model.Children(x => x.IsDocumentType("home") && x.IsVisible());
+    IEnumerable<IContentType> contentTypes = contentTypeService.GetAllContentTypes();
     @*
     var selection = node.Children.Where(x => x.IsVisible() @*&& x.ContentType.Alias == "contentPage"*@
     @*)
