--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -4,6 +4,7 @@
 @{
     var counter = 0;
     var searchQuery = Request.QueryString["q"];
+	IEnumerable<PublishedSearchResult> searchResults;
 }
 <div class="container">
     <form action="" method="GET">
