--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -14,7 +14,12 @@
     
 @if (!string.IsNullOrWhiteSpace(searchQuery))
 {
-    var results = Umbraco.ContentQuery.Search(searchQuery, string.Empty);
+    var searchResults = Umbraco.ContentQuery.Search(searchQuery, string.Empty, "InternalIndex")
+	                        .Where(w => w.Content.IsDocumentType("newsArticle"));
+	    
+	resultsCount = searchResults != null && searchResults.Any() ? searchResults.Count() : 0;
+
+
     long resultCount = results != null && results.Any() ? results.Count() : 0;
     <div class="searchresults">
         <p>We found <strong>@resultCount</strong> result@(resultCount != 1 ? "s" : "") when searching for <strong>@searchQuery</strong></p>
