Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -16,7 +16,7 @@
 {
 
         var results = Umbraco.ContentQuery.Search(searchQuery, string.Empty, "InternalIndex")
-	                        .Where(w => w.Content.IsDocumentType("BlockListDocumentType"));
+	                        .Where(w => w.Content.IsDocumentType("Block1"));
 	    
     
     
