Adding partial-view-macro 'ResponsiveImage.cshtml'

--- a/Views/MacroPartials/ResponsiveImage.cshtml
+++ b/Views/MacroPartials/ResponsiveImage.cshtml
@@ -1,4 +1,4 @@
-﻿@inherits Umbraco.Web.Macros.PartialViewMacroPage
+﻿﻿@inherits Umbraco.Web.Macros.PartialViewMacroPage
 @using Umbraco.Web.Models
 @using System.Text
 @using ContentModels = Umbraco.Web.PublishedModels;
