Adding partial-view 'block.cshtml'

--- a/Views/Partials/BlockList/Components/block.cshtml
+++ b/Views/Partials/BlockList/Components/block.cshtml
@@ -26,7 +26,7 @@ var content = (ContentModels.Block)Model.Content;
     <source srcset="/umbraco/assets/ResponsiveImages//UmbracoLogoExtraSmall.png" media="(max-width: 270px)" sizes="270px" />
     <source srcset="/umbraco/assets/ResponsiveImages/UmbracoLogoSmall.png" media="(max-width: 540px)" sizes="540px" />
     <source srcset="/umbraco/assets/ResponsiveImages/UmbracoLogoLarge.png" sizes="1081px" />
-    <img src="/umbraco/assets/ResponsiveImages/UmbracoLogoLarge.png" alt="Umbraco Logo" />
+    <img src="~/umbraco/assets/ResponsiveImages/UmbracoLogoLarge.png" alt="Umbraco Logo" />
   </picture>
 </body>
 </html>
