Adding partial-view 'block5.cshtml'

--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -3,6 +3,6 @@
 @using ContentModels = Umbraco.Web.PublishedModels;
 @{
 
-var content = (ContentModels.Block)Model.Content;
+var content = (ContentModels.Block5)Model.Content;
 
 }
