Adding partial-view 'block.cshtml'

--- a/Views/Partials/BlockList/Components/block.cshtml
+++ b/Views/Partials/BlockList/Components/block.cshtml
@@ -15,7 +15,7 @@ var content = (ContentModels.Block)Model.Content;
 @using ContentModels = Umbraco.Web.PublishedModels;
 @{
 
-var content = (ContentModels.Block5)Model.Content;
+var content = (ContentModels.Block)Model.Content;
 
 }
 
