Adding partial-view 'BlockListDocumentType.cshtml'

--- a/Views/Partials/BlockListDocumentType.cshtml
+++ b/Views/Partials/BlockListDocumentType.cshtml
@@ -27,6 +27,9 @@
              @Html.Partial("~/Views/Partials/BlockList/Components/block4.cshtml",block)
             break;
             
+            case "Umbraco.Web.PublishedModels.Block5":
+             @Html.Partial("~/Views/Partials/BlockList/Components/block5.cshtml",block)
+            break;
             
         }
     }
