Adding partial-view 'block5.cshtml'

--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -13,7 +13,7 @@ var content = (ContentModels.Block5)Model.Content;
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Responsive Umbraco Logo image</title>
+  @*<title>Responsive Umbraco Logo image</title>*@
 </head>
 <body>
   <img 
