Adding partial-view 'block5.cshtml'

--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -5,7 +5,7 @@
 
 var content = (ContentModels.Block5)Model.Content;
 
-<p>content.Value("Description")</p>
+<p>@content.Value("Description")</p>
     
 }
 
