Adding partial-view 'block5.cshtml'

--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -4,8 +4,8 @@
 @{
 
 var content = (ContentModels.Block5)Model.Content;
-var smallImagePNG = @content.Value<IPublishedContent>("ExtraSmallImagePNG");
-<p>@smallImagePNG</p>
+
+<p>@content.Value("ExtraSmallImagePNG").url</p>
     
 }
 
