--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -5,7 +5,7 @@
 
 var content = (ContentModels.Block5)Model.Content;
 
-<p>@content.Value("ExtraSmallImagePNG").url</p>
+var image = content.Value<IPublishedContent>("ExtraSmallImagePNG");
     
 }
 
