Adding partial-view 'block5.cshtml'

--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -6,6 +6,8 @@
 var content = (ContentModels.Block5)Model.Content;
 
 var image = content.Value<IPublishedContent>("ExtraSmallImagePNG");
+
+<p>@image</p>
     
 }
 
