Adding partial-view 'block5.cshtml'

--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -17,7 +17,7 @@ var content = (ContentModels.Block5)Model.Content;
 </head>
 <body>
   <img 
-    srcset="@content.Value<IPublishedContent>("ExtraSmallImagePNG").Url 270w,
+    srcset="https://raw.githubusercontent.com/Swimburger/ResponsiveUmbracoImages/master/UmbracoLogoExtraSmall.png.Url 270w,
             https://raw.githubusercontent.com/Swimburger/ResponsiveUmbracoImages/master/UmbracoLogoSmall.png 540w,
             https://raw.githubusercontent.com/Swimburger/ResponsiveUmbracoImages/master/UmbracoLogoLarge.png 1081w"
     sizes="(max-width: 270px) 270px,
