Adding partial-view 'block5.cshtml'

--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -4,6 +4,10 @@
 @{
 
 var content = (ContentModels.Block5)Model.Content;
+
+var ExtraSmallImage = content.Value("Description")
+var SmallImage =      content.Value("Description")
+var LargeImage =      content.Value("Description");
     
 }
 
