Adding partial-view 'block5.cshtml'

--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -8,7 +8,10 @@ var content = (ContentModels.Block5)Model.Content;
 var ExtraSmallImage = content.Value("ExtraSmallImage");
 var SmallImage =      content.Value("ExtraSmallImage");
 var LargeImage =      content.Value("largeImage");
-    
+
+<p>@ExtraSmallImage</p>
+<p>@SmallImage</p>
+<p>@LargeImage</p>
 }
 
 <!DOCTYPE html>
