Adding partial-view 'block5.cshtml'

--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -10,9 +10,9 @@ var SmallImage = content.Value<IPublishedContent>("smallImage");
 var LargeImage = content.Value<IPublishedContent>("largeImage"); 
 
 
-<p>@ExtraSmallImage</p>
-<p>@SmallImage</p>
-<p>@LargeImage</p>
+<p>@ExtraSmallImage.Url</p>
+<p>@SmallImage.Url</p>
+<p>@LargeImage.Url</p>
 }
 
 <!DOCTYPE html>
